@@ -1,4 +1,8 @@
-2014-12-02  horneds
+2018-11-02  klen
+
+	* Support indexes for autogenerated models
+
+2014-12-02  klen
 
 	* Version 0.1.0
 	* Initial release
